# llm-path

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: data-spec.md  request-dependency.md  request-graph-implementation.md
docs/plans/: 8.refine-graph-branching.md
llm_trace/: __main__.py  cli.py  cook.py  models.py  proxy.py  storage.py
viewer/demo/: index.html  package-lock.json  package.json  vite.config.ts
viewer/demo/src/: App.tsx  DependencyGraph.tsx  data.ts  index.css
viewer/src/: App.tsx
viewer/src/components/detail/: MessageCard.tsx  RequestDetail.tsx
viewer/src/components/diff/: AddedMessage.tsx  DeletedMessage.tsx  DiffView.tsx  ModifiedMessage.tsx  UnchangedGroup.tsx
viewer/src/components/layout/: Layout.tsx
viewer/src/components/sidebar/: RequestGraph.tsx
viewer/src/hooks/: useDiff.ts
viewer/src/types/: index.ts
viewer/src/utils/: diff.ts
