[project]
name = "llm-trace"
version = "0.1.0"
description = "A tool for tracing LLM requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
llm-trace = "llm_trace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
